--- a/conf/desktop/etc/xdg/waybar/style.css
+++ b/conf/desktop/etc/xdg/waybar/style.css
@@ -7,7 +7,7 @@
 * {
   border: none;
   border-radius: 0;
-  font-family: Input, "Font Awesome 6 Free Solid";
+  font-family: Input, "pango:Taskbar";
   font-size: 13px;
   min-height: 0;
 }
