--- a/conf/desktop/etc/xdg/waybar/style.css
+++ b/conf/desktop/etc/xdg/waybar/style.css
@@ -1,10 +1,12 @@
 @define-color background #1d2021;
 @define-color foreground #ebdbb2;
+@define-color dim        #928374;
 @define-color yellow     #fabd2f;
 @define-color red        #fb4934;
 @define-color green      #b8bb26;
 
 * {
+  background: @background;
   border: none;
   border-radius: 0;
   font-family: Input, "pango:Taskbar";
@@ -27,7 +29,7 @@ window#waybar {
   border-bottom: 3px solid transparent;
 }
 
-#workspaces button.focused {
+#workspaces button.active {
   border-bottom: 3px solid @green;
 }
 
@@ -35,9 +37,7 @@ window#waybar {
   border-bottom: 3px solid @yellow;
 }
 
-#mode {
-  background-color: @background;
-  border-top: 3px solid @background;
+#submap {
   border-bottom: 3px solid @red;
 }
 
@@ -75,7 +75,7 @@ window#waybar {
   border-bottom: 3px solid @green;
 }
 
-#mode,
+#submap,
 #pulseaudio,
 #custom-usbguard,
 #custom-yubikey,
@@ -106,4 +106,31 @@ window#waybar {
 
 #tray {
   margin-left: -1000000px;
+}
+
+#backlight,
+#battery,
+#clock,
+#cpu,
+#custom-eyes,
+#custom-mail,
+#custom-progress,
+#custom-recording,
+#custom-security,
+#custom-systemd,
+#custom-updates,
+#custom-usbguard,
+#custom-yubikey,
+#disk,
+#memory,
+#submap,
+#network,
+#pulseaudio {
+  color: @foreground;
+}
+
+#custom-decrypted,
+#custom-movie,
+#custom-vpn {
+  color: @dim;
 }
